Updated table look & formatation.

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -448,524 +448,600 @@ This artefact contains the physical schema of the database, the identification a
 ### 1.3. Frequent Updates
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>INSERT01</td>
+      <td><b>Query reference</b></td>
+      <td>INSERT01</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>New user registered</td>
+      <td><b>Query description</b></td>
+      <td>New user registered.</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>dozens per month</td>
-    </td>
-    <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">INSERT INTO "UserTable" (username, password, email, name, gender, address,institution, description, birthDate, idCountry) VALUES ($username, $password, $email, $name, $gender, $address, $institution, $description, $birthDate, $idCountry);</code></td>
+      <td><b>Query frequency</b></td>
+      <td>Dozens per month</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          INSERT INTO "UserTable" (username, password, email, name, gender, address,institution, description, birthDate, idCountry) VALUES ($username, $password, $email, $name, $gender, $address, $institution, $description, $birthDate, $idCountry);
+        </code>
+      </td>
+    </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>INSERT02</td>
+      <td><b>Query reference</b></td>
+      <td>INSERT02</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>New project created</td>
+      <td><b>Query description</b></td>
+      <td>New project created.</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>dozens per month</td>
-    </td>
-    <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">INSERT INTO "Project"(creationDate, name, description, private, idForum) VALUES ($creationDate, $name, $description, $private, $idForum);</code></td>
+      <td><b>Query frequency</b></td>
+      <td>Dozens per month</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          INSERT INTO "Project"(creationDate, name, description, private, idForum) VALUES ($creationDate, $name, $description, $private, $idForum);
+        </code>
+      </td>
+    </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>INSERT03</td>
+      <td><b>Query reference</b></td>
+      <td>INSERT03</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>New task created</td>
+      <td><b>Query description</b></td>
+      <td>New task created.</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>dozens per month</td>
-    </td>
-    <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">INSERT INTO "Task"(creationDate, lastEditDate, title, description, deadline, completed, completedDate, idUser, idProject) VALUES ($creationDate, $lastEditDate, $title, $description, $deadline, $completed, $completedDate, $idUser, $idProject);</code></td>
+      <td><b>Query frequency</b></td>
+      <td>Dozens per month</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          INSERT INTO "Task"(creationDate, lastEditDate, title, description, deadline, completed, completedDate, idUser, idProject) VALUES ($creationDate, $lastEditDate, $title, $description, $deadline, $completed, $completedDate, $idUser, $idProject);
+        </code>
+      </td>
+    </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>INSERT04</td>
+      <td><b>Query reference</b></td>
+      <td>INSERT04</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>New comment created</td>
+      <td><b>Query description</b></td>
+      <td>New comment created.</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>dozens per day</td>
-    </td>
-    <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">INSERT INTO "Comment"(creationDate, lastEditDate, content, idTask, idUser, idComment) VALUES ($creationDate, $lastEditDate, $content, $idTask, $idUser, $idComment);</code></td>
+      <td><b>Query frequency</b></td>
+      <td>Dozens per day</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          INSERT INTO "Comment"(creationDate, lastEditDate, content, idTask, idUser, idComment) VALUES ($creationDate, $lastEditDate, $content, $idTask, $idUser, $idComment);
+        </code>
+      </td>
+    </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>INSERT05</td>
+      <td><b>Query reference</b></td>
+      <td>INSERT05</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>New premium signature</td>
+      <td><b>Query description</b></td>
+      <td>New premium signature.</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>once per day</td>
-    </td>
-    <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">INSERT INTO "PremiumSignature"(startDate, duration, idUser) VALUES ($startDate, $duration, $idUser);</code></td>
+      <td><b>Query frequency</b></td>
+      <td>Once per day</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          INSERT INTO "PremiumSignature"(startDate, duration, idUser) VALUES ($startDate, $duration, $idUser);
+        </code>
+      </td>
+    </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>INSERT06</td>
+      <td><b>Query reference</b></td>
+      <td>INSERT06</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>New forum post</td>
+      <td><b>Query description</b></td>
+      <td>New forum post.</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>dozens per day</td>
-    </td>
-    <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">INSERT INTO "ForumPost"(creationDate, lastEditDate, title, content, idForum, idUser) VALUES ($creationDate, $lastEditDate, $title, $content, $idForum, $idUser);</code></td>
+      <td><b>Query frequency</b></td>
+      <td>Dozens per day</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          INSERT INTO "ForumPost"(creationDate, lastEditDate, title, content, idForum, idUser) VALUES ($creationDate, $lastEditDate, $title, $content, $idForum, $idUser);
+        </code>
+      </td>
+    </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>INSERT07</td>
+      <td><b>Query reference</b></td>
+      <td>INSERT07</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>New admin created</td>
+      <td><b>Query description</b></td>
+      <td>New admin created.</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>dozens per day</td>
-    </td>
-    <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">INSERT INTO "Admin"(username, password, email) VALUES ($username, $password, $email);</code></td>
+      <td><b>Query frequency</b></td>
+      <td>Dozens per day</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          INSERT INTO "Admin"(username, password, email) VALUES ($username, $password, $email);
+        </code>
+      </td>
+    </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>INSERT08</td>
+      <td><b>Query reference</b></td>
+      <td>INSERT09</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>User assigned to task</td>
+      <td><b>Query description</b></td>
+      <td>User assigned to task.</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>dozens per day</td>
-    </td>
-    <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">INSERT INTO "Assigned"(idUser, idTask) VALUES ($idUser, $idTask);</code></td>
+      <td><b>Query frequency</b></td>
+      <td>Dozens per day</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          INSERT INTO "Assigned"(idUser, idTask) VALUES ($idUser, $idTask);
+        </code>
+      </td>
+    </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>INSERT09</td>
+      <td><b>Query reference</b></td>
+      <td>INSERT10</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>New close request</td>
+      <td><b>Query description</b></td>
+      <td>New close request.</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>dozens per week</td>
-    </td>
-    <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">INSERT INTO "CloseRequest"(creationDate, title, description, approved, idUser, idTask) VALUES ($creationDate, $title, $description, $approved, $idUser, $idTask);</code></td>
+      <td><b>Query frequency</b></td>
+      <td>Dozens per week</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          INSERT INTO "CloseRequest"(creationDate, title, description, approved, idUser, idTask) VALUES ($creationDate, $title, $description, $approved, $idUser, $idTask);
+        </code>
+      </td>
+    </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>INSERT10</td>
+      <td><b>Query reference</b></td>
+      <td>INSERT11</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>New reply created</td>
+      <td><b>Query description</b></td>
+      <td>New reply created.</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>dozens per day</td>
-    </td>
-    <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">INSERT INTO "Reply"( creationDate, lastEditDate, content, idPost, idUser) VALUES ($creationDate, $lastEditDate, $content, $idPost, $idUser);</code></td>
+      <td><b>Query frequency</b></td>
+      <td>Dozens per week</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          INSERT INTO "Reply"( creationDate, lastEditDate, content, idPost, idUser) VALUES ($creationDate, $lastEditDate, $content, $idPost, $idUser);
+        </code>
+      </td>
+    </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>INSERT11</td>
+      <td><b>Query reference</b></td>
+      <td>INSERT12</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>New country inserted</td>
+      <td><b>Query description</b></td>
+      <td>User joined project.</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>Once per week, mostly when the database is created</td>
-    </td>
-    <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">INSERT INTO "Country"( name) VALUES ($name);</code></td>
+      <td><b>Query frequency</b></td>
+      <td>Dozens per week</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          INSERT INTO "Joined"(idUser, idProject, joinedDate, role) VALUES ($idUser, $idProject, $joinedDate, $role);
+        </code>
+      </td>
+    </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>INSERT12</td>
+      <td><b>Query reference</b></td>
+      <td>UPDATE01</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>User joined project</td>
+      <td><b>Query description</b></td>
+      <td>Update user information.</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>Dozens per week</td>
-    </td>
-    <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">INSERT INTO "Joined"(idUser, idProject, joinedDate, role) VALUES ($idUser, $idProject, $joinedDate, $role);</code></td>
-    </tr>
-</table>
-
-<table>
-    <tr>
-        <td><b>Query reference</b></td>
-        <td>UPDATE01</td>
+      <td><b>Query frequency</b></td>
+      <td>Once per week</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>Update user information</td>
-    </tr>
-    <tr>
-        <td><b>Query frequency</b></td>
-        <td>Once per month</td>
-    </td>
-    <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">
-        UPDATE "UserTable"
+      <td colspan="2">
+        <code>
+          UPDATE "UserTable"
             SET password = $password, email = $email, premium  = $premium, banned = $banned, name = $name, gender = $gender, address = $address, institution = $institution, description = $description, birthDate = $birthDate
             WHERE idUser = $idUser;
-        </code></td>
+        </code>
+      </td>
     </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>UPDATE02</td>
+      <td><b>Query reference</b></td>
+      <td>UPDATE02</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>Update project information</td>
+      <td><b>Query description</b></td>
+      <td>Update project information.</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>Once per week</td>
-    </td>
+      <td><b>Query frequency</b></td>
+      <td>Once per week</td>
+    </tr>
     <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">
-        UPDATE "Project"
+      <td colspan="2">
+        <code>
+          UPDATE "Project"
             SET name = $name, description = $description, private = $private
             WHERE idProject = $idProject;
-        </code></td>
+        </code>
+      </td>
     </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>UPDATE03</td>
+      <td><b>Query reference</b></td>
+      <td>UPDATE03</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>Update forum post</td>
+      <td><b>Query description</b></td>
+      <td>Update forum post.</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>Once per day</td>
-    </td>
+      <td><b>Query frequency</b></td>
+      <td>Once per day</td>
+    </tr>
     <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">
-        UPDATE "ForumPost"
+      <td colspan="2">
+        <code>
+          UPDATE "ForumPost"
             SET lastEditDate = $lastEditDate, title = $title, content = $content
             WHERE idPost = $idPost;
-        </code></td>
+        </code>
+      </td>
     </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>UPDATE04</td>
+      <td><b>Query reference</b></td>
+      <td>UPDATE04</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>Update task comment</td>
+      <td><b>Query description</b></td>
+      <td>Update task comment.</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>Once per day</td>
-    </td>
+      <td><b>Query frequency</b></td>
+      <td>Once per day</td>
+    </tr>
     <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">
-        UPDATE "Comment"
+      <td colspan="2">
+        <code>
+          UPDATE "Comment"
             SET lastEditDate = $lastEditDate, content = $content
             WHERE idComment = $idComment;
-        </code></td>
+        </code>
+      </td>
     </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>UPDATE05</td>
+      <td><b>Query reference</b></td>
+      <td>UPDATE05</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>Update task information</td>
+      <td><b>Query description</b></td>
+      <td>Update task information.</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>Once per day</td>
-    </td>
+      <td><b>Query frequency</b></td>
+      <td>Once per day</td>
+    </tr>
     <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">
-        UPDATE "Task"
+      <td colspan="2">
+        <code>
+          UPDATE "Task"
             SET lastEditDate = $lastEditDate, title = $title, description = $description, deadline = $deadline, completed = $completed, completionDate = $completionDate
             WHERE idTask = $idTask;
-        </code></td>
+        </code>
+      </td>
     </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>UPDATE06</td>
+      <td><b>Query reference</b></td>
+      <td>UPDATE06</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>Update close request information</td>
+      <td><b>Query description</b></td>
+      <td>Update close request information.</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>Once per day</td>
-    </td>
+      <td><b>Query frequency</b></td>
+      <td>Once per day</td>
+    </tr>
     <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">
-        UPDATE "CloseRequest"
+      <td colspan="2">
+        <code>
+          UPDATE "CloseRequest"
             SET title = $title, description = $description, approved = $approved
             WHERE idRequest = $idRequest;
-        </code></td>
+        </code>
+      </td>
     </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>UPDATE07</td>
+      <td><b>Query reference</b></td>
+      <td>UPDATE07</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>Update admin information</td>
+      <td><b>Query description</b></td>
+      <td>Update admin information.</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>Once per day</td>
-    </td>
+      <td><b>Query frequency</b></td>
+      <td>Once per day</td>
+    </tr>
     <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">
-        UPDATE "Admin"
+      <td colspan="2">
+        <code>
+          UPDATE "Admin"
             SET password = $password, email = $email
             WHERE idAdmin = $idAdmin;
-        </code></td>
+        </code>
+      </td>
     </tr>
+  <tbody>
+</table>
+
+
+<table>
+  <tbody>
+    <tr>
+      <td><b>Query reference</b></td>
+      <td>DELETE01</td>
+    </tr>
+    <tr>
+      <td><b>Query description</b></td>
+      <td>Delete task.</td>
+    </tr>
+    <tr>
+      <td><b>Query frequency</b></td>
+      <td>Once per day</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          DELETE FROM Task
+          WHERE idTask = $idTask;
+        </code>
+      </td>
+    </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>DELETE01</td>
+      <td><b>Query reference</b></td>
+      <td>DELETE02</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>Delete task</td>
+      <td><b>Query description</b></td>
+      <td>Delete task comment</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>Once per day</td>
-    </td>
-    <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">
-         DELETE FROM Task
-         WHERE idTask = $idTask;
-        </code></td>
+      <td><b>Query frequency</b></td>
+      <td>Once per day</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          DELETE FROM Comment
+          WHERE idComment = $idComment;
+        </code>
+      </td>
+    </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>DELETE02</td>
+      <td><b>Query reference</b></td>
+      <td>DELETE03</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>Delete task comment</td>
+      <td><b>Query description</b></td>
+      <td>Delete project</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>Once per day</td>
-    </td>
-    <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">
-         DELETE FROM Comment
-         WHERE idComment = $idComment;
-        </code></td>
+      <td><b>Query frequency</b></td>
+      <td>Once per day</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          DELETE FROM Project
+          WHERE idProject = $idProject;
+        </code>
+      </td>
+    </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>DELETE03</td>
+      <td><b>Query reference</b></td>
+      <td>DELETE04</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>Delete project</td>
+      <td><b>Query description</b></td>
+      <td>Delete forum post</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>Once per day</td>
-    </td>
-    <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">
-         DELETE FROM Project
-         WHERE idProject = $idProject;
-        </code></td>
+      <td><b>Query frequency</b></td>
+      <td>Once per day</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          DELETE FROM ForumPost
+          WHERE idPost = $idPost;
+        </code>
+      </td>
+    </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>DELETE04</td>
+      <td><b>Query reference</b></td>
+      <td>DELETE05</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>Delete forum post</td>
+      <td><b>Query description</b></td>
+      <td>Delete forum post reply</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>Once per day</td>
-    </td>
-    <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">
-         DELETE FROM ForumPost
-         WHERE idPost = $idPost;
-        </code></td>
+      <td><b>Query frequency</b></td>
+      <td>Once per day</td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          DELETE FROM Reply
+          WHERE idReply = $idReply;
+        </code>
+      </td>
+    </tr>
+  <tbody>
 </table>
 
 <table>
+  <tbody>
     <tr>
-        <td><b>Query reference</b></td>
-        <td>DELETE05</td>
+      <td><b>Query reference</b></td>
+      <td>DELETE06</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>Delete forum post reply</td>
+      <td><b>Query description</b></td>
+      <td>Delete user</td>
     </tr>
     <tr>
-        <td><b>Query frequency</b></td>
-        <td>Once per day</td>
-    </td>
-    <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">
-         DELETE FROM Reply
-         WHERE idReply = $idReply;
-        </code></td>
-    </tr>
-</table>
-
-<table>
-    <tr>
-        <td><b>Query reference</b></td>
-        <td>DELETE06</td>
+      <td><b>Query frequency</b></td>
+      <td>Once per day</td>
     </tr>
     <tr>
-        <td><b>Query description</b></td>
-        <td>Delete user</td>
-    </tr>
-    <tr>
-        <td><b>Query frequency</b></td>
-        <td>Once per day</td>
-    </tr>
-    <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">
+      <td colspan="2">
+        <code>
          DELETE FROM User
          WHERE idUser = $idUser;
-        </code></td>
+        </code>
+      </td>
     </tr>
+  <tbody>
 </table>
 
 
@@ -975,42 +1051,45 @@ This artefact contains the physical schema of the database, the identification a
 <table>
   <tbody>
     <tr>
-      <tb><b>Index reference</b></tb>
-      <tb>IDX01</tb>
+      <td><b>Index reference</b></td>
+      <td>DX01</td>
     </tr>
     <tr>
-      <tb><b>Related queries</b></tb>
-      <tb>TBD</tb>
+      <td><b>Related queries</b></td>
+      <td>TBD</td>
     </tr>
     <tr>
-      <tb><b>Index relation</b></tb>
-      <tb>tbd</tb>
+      <td><b>Index relation</b></td>
+      <td>tbd</td>
     </tr>
     <tr>
-      <tb><b>Index attribute</b></tb>
-      <tb>tbd</tb>
+      <td><b>Index attribute</b></td>
+      <td>tbd</td>
     </tr>
     <tr>
-      <tb><b>Index type</b></tb>
-      <tb>tbd</tb>
+      <td><b>Index type</b></td>
+      <td>tbd</td>
     </tr>
     <tr>
-      <tb><b>Cardinality</b></tb>
-      <tb>tbd</tb>
+      <td><b>Cardinality</b></td>
+      <td>tbd</td>
     </tr>
     <tr>
-      <tb><b>Clustering</b></tb>
-      <tb>tbd</tb>
+      <td><b>Clustering</b></td>
+      <td>tbd</td>
     </tr>
     <tr>
-      <tb><b>Justification</b></tb>
-      <tb>tbd</tb>
+      <td><b>Justification</b></td>
+      <td>tbd</td>
     </tr>
     <tr>
-      <tb colspan="2">
-      </tb>
+      <td colspan="2">
+        <code>
+         sql code
+        </code>
+      </td>
     </tr>
-  </tbody>
+  <tbody>
 </table>
 
 
@@ -1288,7 +1367,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td colspan="2">
-        <pre>
+        <code>
           CREATE OR REPLACE FUNCTION insertPost() RETURNS TRIGGER AS
           $BODY$
           BEGIN
@@ -1305,7 +1384,12 @@ This artefact contains the physical schema of the database, the identification a
           END
           $BODY$
           LANGUAGE plpgsql;
-        </pre>
+
+          CREATE TRIGGER onCreatePost BEFORE INSERT ON plenum.ForumPost
+          FOR EACH ROW
+          EXECUTE PROCEDURE plenum.insertPost();
+
+        </code>
       </td>
     </tr>
   </tbody>
@@ -1323,7 +1407,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td colspan="2">
-        <pre>
+        <code>
           CREATE OR REPLACE FUNCTION plenum.insertReply() RETURNS TRIGGER AS
           $BODY$
             BEGIN
@@ -1344,7 +1428,8 @@ This artefact contains the physical schema of the database, the identification a
           CREATE TRIGGER onCreateReply BEFORE INSERT ON plenum.Reply
           FOR EACH ROW
           EXECUTE PROCEDURE plenum.insertReply();
-        </pre>
+
+        </code>
       </td>
     </tr>
   </tbody>
@@ -1362,7 +1447,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td colspan="2">
-        <pre>
+        <code>
           CREATE OR REPLACE FUNCTION plenum.insertComent() RETURNS TRIGGER AS
           $BODY$
             BEGIN
@@ -1383,7 +1468,8 @@ This artefact contains the physical schema of the database, the identification a
           CREATE TRIGGER onCreateComment BEFORE INSERT ON plenum.Comment
           FOR EACH ROW
           EXECUTE PROCEDURE plenum.insertComent();
-        </pre>
+
+        </code>
       </td>
     </tr>
   </tbody>
@@ -1401,7 +1487,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td colspan="2">
-        <pre>
+        <code>
           CREATE OR REPLACE FUNCTION plenum.insertCloseRequest() RETURNS TRIGGER AS
           $BODY$
             BEGIN
@@ -1417,7 +1503,8 @@ This artefact contains the physical schema of the database, the identification a
           CREATE TRIGGER onCreateCloseRequest BEFORE INSERT ON plenum.CloseRequest
           FOR EACH ROW
           EXECUTE PROCEDURE plenum.insertCloseRequest();
-        </pre>
+
+        </code>
       </td>
     </tr>
   </tbody>
@@ -1435,7 +1522,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td colspan="2">
-        <pre>
+        <code>
           CREATE OR REPLACE FUNCTION plenum.insertTask() RETURNS TRIGGER AS
           $BODY$
             BEGIN
@@ -1456,7 +1543,8 @@ This artefact contains the physical schema of the database, the identification a
           CREATE TRIGGER onCreateTask BEFORE INSERT ON plenum.Task
           FOR EACH ROW
           EXECUTE PROCEDURE plenum.insertTask();
-        </pre>
+
+        </code>
       </td>
     </tr>
   </tbody>
@@ -1474,7 +1562,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td colspan="2">
-        <pre>
+        <code>
           CREATE OR REPLACE FUNCTION plenum.insertAssigned() RETURNS TRIGGER AS
           $BODY$
             BEGIN
@@ -1495,7 +1583,8 @@ This artefact contains the physical schema of the database, the identification a
           CREATE TRIGGER onCreateAssigned BEFORE INSERT ON plenum.Assigned
           FOR EACH ROW
           EXECUTE PROCEDURE plenum.insertAssigned();
-        </pre>
+
+        </code>
       </td>
     </tr>
   </tbody>
@@ -1513,7 +1602,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td colspan="2">
-        <pre>
+        <code>
           CREATE OR REPLACE FUNCTION plenum.canProjectBePrivate() RETURNS TRIGGER AS
           $BODY$
             BEGIN
@@ -1535,7 +1624,8 @@ This artefact contains the physical schema of the database, the identification a
           FOR EACH ROW
           WHEN (NEW.private IS TRUE)
           EXECUTE PROCEDURE plenum.canProjectBePrivate();
-        </pre>
+
+        </code>
       </td>
     </tr>
   </tbody>
@@ -1553,7 +1643,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td colspan="2">
-        <pre>
+        <code>
           CREATE OR REPLACE FUNCTION plenum.updateUserTable() RETURNS TRIGGER AS
           $BODY$
             BEGIN
@@ -1575,7 +1665,8 @@ This artefact contains the physical schema of the database, the identification a
           FOR EACH ROW
           WHEN (new.premium = false)
           EXECUTE PROCEDURE plenum.updateUserTable();
-        </pre>
+
+        </code>
       </td>
     </tr>
   </tbody>
