--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -44,7 +44,7 @@ This artefact contains the physical schema of the database, the identification a
     <tr>
         <td><b>SQL Code</b></td>
         <td><code "sql">SELECT username, email, gender, description
-                        FROM UserTable;</code></td>
+        FROM UserTable;</code></td>
     </tr>
 </table>
 
@@ -55,7 +55,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>Get User Information</td>
+        <td>Get User's Information</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -454,7 +454,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>New user registered</td>
+        <td>New User registered</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -473,7 +473,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>New project created</td>
+        <td>New Project created</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -492,7 +492,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>New task created</td>
+        <td>New Task created</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -511,7 +511,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>New comment created</td>
+        <td>New Comment created</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -530,7 +530,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>New premium signature</td>
+        <td>New Premium Signature</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -549,7 +549,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>New forum post</td>
+        <td>New Forum Post</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -568,7 +568,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>New admin created</td>
+        <td>New Admin created</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -587,7 +587,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>User assigned to task</td>
+        <td>User Assigned to Task</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -606,7 +606,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>New close request</td>
+        <td>New Close Request</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -625,7 +625,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>New reply created</td>
+        <td>New Reply created</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -644,7 +644,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>New country inserted</td>
+        <td>New Country inserted</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -663,7 +663,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>User joined project</td>
+        <td>User Joined Project</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -682,7 +682,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>Update user information</td>
+        <td>Update User's information</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -705,7 +705,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>Update project information</td>
+        <td>Update Project's information</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -728,7 +728,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>Update forum post</td>
+        <td>Update Forum Post</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -751,7 +751,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>Update task comment</td>
+        <td>Update Task Comment</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -774,7 +774,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>Update task information</td>
+        <td>Update Task's information</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -797,7 +797,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>Update close request information</td>
+        <td>Update CloseRequest's information</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -820,7 +820,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>Update admin information</td>
+        <td>Update Admin's information</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -843,7 +843,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>Delete task</td>
+        <td>Delete Task</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -865,7 +865,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>Delete task comment</td>
+        <td>Delete Task Comment</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -887,7 +887,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>Delete project</td>
+        <td>Delete Project</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -909,7 +909,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>Delete forum post</td>
+        <td>Delete Forum Post</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -931,7 +931,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>Delete forum post reply</td>
+        <td>Delete ForumPost's Reply</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
@@ -953,7 +953,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>Delete user</td>
+        <td>Delete User</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
